fixed: print view of Grid Theme form in Pages mode doesn't properly stretch cells in the current page,
https://github.com/kobotoolbox/enketo-express/issues/958

--- a/src/sass/grid/_print.scss
+++ b/src/sass/grid/_print.scss
@@ -193,6 +193,10 @@ $printBaseFontSize: 10px;
     }
 }
 
+.pages.or [role="page"].current:not(.question) {
+    display: inherit;
+}
+
 @media print,
 screen and (min-width: 700px) {
     @for $total from 1 through $max-columns {
